[package]
name = "eve_industry_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8.0", features = [ "sqlite", "macros", "runtime-tokio-native-tls" ] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "2.4.0" }
futures = { version = "0.3.30" }
serde_json = { version = "1.0.122" }
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
